<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>Simple_shooting_2_1</groupId>
    <artifactId>Simple_shooting_2_1</artifactId>
    <packaging>jar</packaging>
    <version>1.1.6</version>

    <properties>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
          <groupId>org.antlr</groupId>
          <artifactId>antlr-complete</artifactId>
          <version>4.11.1</version>
          <scope>system</scope>
          <systemPath>${pom.basedir}/Libraries/antlr.jar</systemPath>
        </dependency>
        <dependency>
          <groupId>org.processing</groupId>
          <artifactId>Processing</artifactId>
          <version>4.1.3</version>
          <scope>system</scope>
          <systemPath>${pom.basedir}/Libraries/core.jar</systemPath>
        </dependency>
        <dependency>
          <groupId>net.java.jinput</groupId>
          <artifactId>jinput</artifactId>
          <version>2.0.9</version>
      </dependency>
      <dependency>
          <groupId>net.java.jinput</groupId>
          <artifactId>jinput</artifactId>
          <version>2.0.9</version>
          <classifier>natives-all</classifier>
      </dependency>
        <dependency>
          <groupId>org.gluegen</groupId>
          <artifactId>gluegen-rt</artifactId>
          <version>4.1.3</version>
          <scope>system</scope>
          <systemPath>${pom.basedir}/Libraries/gluegen-rt.jar</systemPath>
        </dependency>
        <dependency>
          <groupId>com.metsci.ext.org.jogamp.jogl</groupId>
          <artifactId>jogl-all</artifactId>
          <version>4.1.3</version>
          <scope>system</scope>
          <systemPath>${pom.basedir}/Libraries/jogl-all.jar</systemPath>
        </dependency>
        <dependency>
          <groupId>org.parser</groupId>
          <artifactId>parser</artifactId>
          <version>1.0.0</version>
          <scope>system</scope>
          <systemPath>${pom.basedir}/Libraries/parser.jar</systemPath>
        </dependency>
        <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <version>5.7.0</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.maven.plugin-testing</groupId>
          <artifactId>maven-plugin-testing-harness</artifactId>
          <version>3.3.0</version>
          <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>Simple_shooting_2_1.Simple_shooting_2_1</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-dependency-plugin</artifactId>
              <executions>
                <execution>
                  <id>unpack</id>
                  <phase>compile</phase>
                  <goals>
                    <goal>unpack</goal>
                  </goals>
                  <configuration>
                    <artifactItems>
                      <artifactItem>
                        <groupId>org.jdesktop</groupId>
                        <artifactId>jdic-native</artifactId>
                        <version>${jdic.version}</version>
                        <classifier>${build.type}</classifier>
                        <type>jar</type>
                        <overWrite>true</overWrite>
                        <outputDirectory>${project.build.directory}/lib</outputDirectory>
                      </artifactItem>
                    </artifactItems>
                  </configuration>
                </execution>
              </executions>
              <configuration>
                  <executable>java</executable>
                  <arguments>
                      <argument>-classpath</argument>
                      <classpath/>
                      <argument>-Djava.library.path=${project.build.directory}/natives</argument>
                      <argument>-Djinput.loglevel=OFF</argument>
                      <argument>net.java.games.input.example.ReadAllEvents</argument>
                  </arguments>
              </configuration>
            </plugin>
            <plugin>
                <groupId>com.googlecode.mavennatives</groupId>
                <artifactId>maven-nativedependencies-plugin</artifactId>
                <version>0.0.7</version>
                <executions>
                    <execution>
                        <id>unpacknatives</id>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>